--- a/styles.css
+++ b/styles.css
@@ -531,7 +531,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     width: 100%;
     height: 75vh; /* similar al de Equilibra */
-    background-image: url("assets/images/playa.jpeg"); /* usa tu propia imagen */
+    background-image: url("assets/images/playa.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
